# project-explorer-mcp

./: CHANGELOG.md  README.md  pyproject.toml
.github/agents/: project-explorer-mcp-test.agent.md
app/: server.py
docs/: PUBLISHING.md  project-explorer-mcp-plan.md
src/project_explorer_mcp/: main.py  utils.py
src/project_explorer_mcp/config/: logging.py  settings.py
src/project_explorer_mcp/tools/: __init__.py  dir_tree.py  markdown_outline.py  python_outline.py
tests/: test_dir_tree.md  test_dir_tree_formats.py  test_integration.py  test_sample.md  test_sample.py
